--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Artem Inc. | Database A -> Login</title>
-<link rel="icon" href="/favicons/arteminclogo.ico" type="image/x-icon" />
+<link rel="icon" href="/favicons/databasealogo.ico" type="image/x-icon" />
 <script src="access.js"></script>
 </head>
 <body>
