--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Artem Inc. | Database A -> Home</title>
-<link href="/favicons/arteminclogo.ico" rel="icon" type="image/x-icon" />
+<link href="/favicons/databasealogo.ico" rel="icon" type="image/x-icon" />
 <link rel="stylesheet" href="menuBar.css" type="text/css"/>
 <script src="check.js"></script>
 </head>
