--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Artem Inc. | Database A -> Home</title>
+<title>Artem Inc. | Database A - Home</title>
 <link href="/favicons/databasealogo.ico" rel="icon" type="image/x-icon" />
 <link rel="stylesheet" href="menuBar.css" type="text/css"/>
 <script src="check.js"></script>
