--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -25,11 +25,11 @@ fieldset{
 <hr />
 <fieldset id="indianabobmadlibs">
 <legend><b>Indiana Bob Madlibs</b></legend>
-<i><b><a href="https://codecademy123.github.io/artem/resources/indianabobmadlib1.pdf" target="_blank" title="Indiana Bob and a Strange Encounter with Aliens - Madlib #1">Indiana Bob and a Strange Encounter with Aliens - Madlib #1</a></b></i>
+<i><b><a href="resources/indianabobmadlib1.pdf" target="_blank" title="Indiana Bob and a Strange Encounter with Aliens - Madlib #1">Indiana Bob and a Strange Encounter with Aliens - Madlib #1</a></b></i>
 <br />
-<i><b><a href="https://codecademy123.github.io/artem/resources/indianabobmadlib2.pdf" target="_blank" title="Indiana Bob and the Crack in the World - Madlib #2">Indiana Bob and the Crack in the World - Madlib #2</a></b></i>
+<i><b><a href="resources/indianabobmadlib2.pdf" target="_blank" title="Indiana Bob and the Crack in the World - Madlib #2">Indiana Bob and the Crack in the World - Madlib #2</a></b></i>
 <br />
-<i><b><a href="https://codecademy123.github.io/artem/resources/indianabobmadlib3.pdf" target="_blank" title="The Legend of Indiana Bob - Madlib #3">The Legend of Indiana Bob - Madlib #3</a></b></i>
+<i><b><a href="resources/indianabobmadlib3.pdf" target="_blank" title="The Legend of Indiana Bob - Madlib #3">The Legend of Indiana Bob - Madlib #3</a></b></i>
 </fieldset>
 
 <fieldset id="games">
