--- a/databases/a/calendar.html
+++ b/databases/a/calendar.html
@@ -43,6 +43,7 @@ table tr {
 <a href="home.html"><button id="menubutton"><b>Home</b></button></a>
 <a href="calendar.html"><button id="menubutton"><b>Calendar</b></button></a>
 <a href="latestnews.html"><button id="menubutton"><b>Latest News</b></button></a>
+<a href="../b/"><button id="menubutton"><b>Database B</b></button></a>
 <a href="#"><button onclick="logOut()" id="menubutton"><b>Log Out</b></button></a>
 <b id="greeting"></b>
 </div>
