--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -19,6 +19,7 @@ fieldset{
 <a href="home.html"><button id="menubutton"><b>Home</b></button></a>
 <a href="calendar.html"><button id="menubutton"><b>Calendar</b></button></a>
 <a href="latestnews.html"><button id="menubutton"><b>Latest News</b></button></a>
+<a href="../b/"><button id="menubutton"><b>Database B</b></button></a>
 <a href="#"><button onclick="logOut()" id="menubutton"><b>Log Out</b></button></a>
 <b id="greeting"></b>
 </div>
@@ -64,7 +65,7 @@ Sneaking on the database during class? Here are some quick links to use to avoid
   <li><a href="https://app.schoology.com/home" target="_blank">Schoology(only use if you are logged in)</a></li>
 </ul>
 </fieldset>
-<b>Feel free to contribute games, quotes, or jokes you or your friend made by emailing me at seanhe17@gmail.com. Please provide url(if needed) and creator.</b>
+<b>Feel free to contribute games, quotes, or jokes you or your friend made by emailing us at contact.arteminc@gmail.com. Please provide url(if needed) and creator.</b>
 <script src="menuBar.js"></script>
 </body>
 </html>
