--- a/databases/b/index.html
+++ b/databases/b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Artem Inc. | Database A - Login</title>
+<title>Artem Inc. | Database B - Login</title>
 <link rel="icon" href="/favicons/databasealogo.ico" type="image/x-icon" />
 <script src="access.js"></script>
 </head>
