--- a/databases/b/index.html
+++ b/databases/b/index.html
@@ -22,7 +22,7 @@
   }
 </style>
 <center>
-<h1><strong>Welcome to Database A</strong></h1>
+<h1><strong>Welcome to Database B</strong></h1>
 <strong>Username:</strong>
 <input id="username" required></input>
 <br />
