--- a/databases/b/index.html
+++ b/databases/b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="icon" href="/favicons/databaseblogo.ico" type="image/x-icon" />
+<link rel="icon" href="https://arteminc.github.io/favicons/databaseblogo.ico" type="image/x-icon" />
 <title>Artem Inc. | Database B - Login</title>
 <script src="access.js"></script>
 </head>
