--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     border-width:5px;
     border-color:#59f425;
     cursor:auto;
+    color:black;
+  }
+  a{
+    text-decoration:none;
   }
 </style>
 <center><h1>Welcome to the archive of Artem Inc.</h1></center>
