--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Artem Inc. | Home Page</title>
+<link rel="icon" href="/favicons/arteminclogo.ico" type="image/x-icon"/>
 </head>
 <body>
 <style>
@@ -29,6 +30,7 @@
 </style>
 <center><h1>Welcome to the archive of Artem Inc.</h1></center>
 <p>Artem Inc. right now contains two databases. Database A contains jokes, quotes, and other cool stuff and a virtual calendar. Database B is still under construction. It will have secret documents and information. The links are below
+<br />
 <a href="databases/a/" id="a">Database A</a>
 <a href="databases/b/" id="b">Database B</a>
 </body>
