--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
   a{
     text-decoration:none;
   }
+  h1{
+    color:#6699ff;
+  }
 </style>
-<center><h1>Welcome to the archive of Artem Inc.</h1></center>
+<center><h1>Welcome To The Archive of Artem Inc.</h1></center>
 <p>Artem Inc. right now contains two databases. Database A contains jokes, quotes, and other cool stuff and a virtual calendar. Database B is still under construction. It will have secret documents and information. The links are below
 <br />
 <a href="databases/a/" id="a">Database A</a>
