--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
 <center><h1>Welcome To The Archive of Artem Inc.</h1></center>
 <p>Artem Inc. right now contains two databases. Database A contains jokes, quotes, and other cool stuff and a virtual calendar. Database B is still under construction. It will have secret documents and information. The links are below
 <br />
+<center>
 <a href="databases/a/" id="a">Database A</a>
 <a href="databases/b/" id="b">Database B</a>
+</center>
 </body>
 </html>
