--- a/databases/a/index.html
+++ b/databases/a/index.html
@@ -27,6 +27,7 @@
     outline: 0;
     background: transparent;
     border-bottom: 2px solid #ffdd99;
+    color: white;
   }
   input:focus{
     border-bottom: 2.5px solid #ffcc66;
