--- a/databases/a/index.html
+++ b/databases/a/index.html
@@ -28,6 +28,8 @@
     background: transparent;
     border-bottom: 2px solid #ffdd99;
     color: white;
+    width:170px;
+    padding:10px;
   }
   input:focus{
     border-bottom: 2.5px solid #ffcc66;
