--- a/databases/a/index.html
+++ b/databases/a/index.html
@@ -29,7 +29,7 @@
     border-bottom: 2px solid #ffdd99;
     color: white;
     width:170px;
-    padding:10px;
+    padding:0px 10px;
   }
   input:focus{
     border-bottom: 2.5px solid #ffcc66;
