--- a/databases/b/index.html
+++ b/databases/b/index.html
@@ -20,6 +20,18 @@
     border-color:#0084ff;
     cursor:auto;
   }
+  input {
+    border: 0;
+    outline: 0;
+    background: transparent;
+    border-bottom: 2px solid #339cff;
+    color: white;
+    width:170px;
+    padding:0px 10px;
+  }
+  input:focus{
+    border-bottom: 3px solid #0084ff;
+  }
 </style>
 <center>
 <h1><strong>Welcome to Database B</strong></h1>
