--- a/404.html
+++ b/404.html
@@ -1,6 +1,12 @@
-<center>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Artem Inc. | 404 - File Not Found</title>
+<link rel="icon" href="/favicons/arteminclogo.ico" type="image/x-icon">
+</head>
+<body>
 <style>
-center {
+body {
   font-style:Arial;
 }
 h1 {
@@ -8,9 +14,14 @@ h1 {
 }
 a {
   text-decoration:none;
+  color:#6699ff;
 }
 </style>
+<center>
 <h1><b>404</b></h1>
 <h3>File Not Found</h3>
 <p>The requested file could not be found</p>
 <p>Try checking the address or return to the <a href="https://arteminc.github.io">home page</a></p>
+</center>
+</body>
+</html>
