--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
   h1{
     color:#6699ff;
   }
+  body{
+    font-family:Arial;
+  }
 </style>
 <center><h1>Welcome To The Archive of Artem Inc.</h1></center>
 <p>Artem Inc. right now contains two databases. Database A contains jokes, quotes, and other cool stuff and a virtual calendar. Database B is still under construction. It will have secret documents and information. The links are below
