--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   }
 </style>
 <center><h1>Welcome To The Archive of Artem Inc.</h1></center>
-<p>Artem Inc. right now contains two databases. Database A contains jokes, quotes, and other cool stuff and a virtual calendar. Database B is still under construction. It will have secret documents and information. The links are below
+<p>Right now Artem Inc. contains two databases. Database A contains jokes, quotes, and other cool stuff and a virtual calendar. Database B is still under construction. It will have secret documents and information. The links are below
 <br />
 <center>
 <a href="databases/a/" id="a">Database A</a>
