--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -58,6 +58,8 @@ fieldset{
 <legend><b>Other</b></legend>
 <a href="https://sites.google.com/view/themostsavage" target="_blank">Check out Taylor's website</a>
 <br />
+<a href="https://codecademy123.github.io/movies/first-stopmotion" target="_blank">Example Stop Motion Movie made using Stop Motion Animator</a>
+<br />
 Sneaking on the database during class? Here are some quick links to use to avoid being caught:
 <ul>
   <li><a href="https://id.pausd.org/arms/p/" target="_blank">RapidIdentity</a></li>
