--- a/databases/b/index.html
+++ b/databases/b/index.html
@@ -36,10 +36,10 @@
 <center>
 <h1><strong>Welcome to Database B</strong></h1>
 <strong>Username:</strong>
-<input id="username" required></input>
+<input id="username" placeholder="Username" required></input>
 <br />
 <strong>Password:</strong>
-<input id="password" type="password" required></input>
+<input id="password" type="password" placeholder="Password" required></input>
 <p style="color:white">.</p>
   <button onclick="authenticateData()" id="signin"><b>Sign-In</b></button>
 <p id="error" style="color:red"></p>
