--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -4,6 +4,7 @@
 <title>Artem Inc. | Database A - Home</title>
 <link href="/favicons/databasealogo.ico" rel="icon" type="image/x-icon" />
 <link rel="stylesheet" href="menuBar.css" type="text/css"/>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="check.js"></script>
 </head>
 <body>
