--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -17,7 +17,7 @@ fieldset{
 }
 </style>
 <div id="menu">
-<a href="home.html"><button id="menubutton"><b>Home</b></button></a>
+<a href="home.html"><button id="menubutton" onmouseover="highlight()"><b>Home</b></button></a>
 <a href="calendar.html"><button id="menubutton"><b>Calendar</b></button></a>
 <a href="latestnews.html"><button id="menubutton"><b>Latest News</b></button></a>
 <a href="../b/"><button id="menubutton"><b>Database B</b></button></a>
