--- a/databases/b/home.html
+++ b/databases/b/home.html
@@ -1,1 +1,30 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<title>Artem Inc. | Database A - Home</title>
+<link href="/favicons/databasealogo.ico" rel="icon" type="image/x-icon" />
+<link rel="stylesheet" href="menuBar.css" type="text/css"/>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="check.js"></script>
+</head>
+<body>
+<style>
+fieldset{
+  background-color:#59f425;
+  border-width:12px;
+  border-color:#0084FF;
+  border-radius:7.5px;
+}
+</style>
+<div id="menu">
+<a href="home.html"><button id="menubutton" onmouseover="highlight()"><b>Home</b></button></a>
+<a href="calendar.html"><button id="menubutton"><b>Calendar</b></button></a>
+<a href="latestnews.html"><button id="menubutton"><b>Latest News</b></button></a>
+<a href="../b/"><button id="menubutton"><b>Database B</b></button></a>
+<a href="#"><button onclick="logOut()" id="menubutton"><b>Log Out</b></button></a>
+<b id="greeting"></b>
+</div>
+<hr />
+<script src="menuBar.js"></script>
+</body>
+</html>
