--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     color:#6699ff;
   }
   body{
-    font-family:Arial;
+    font-family:Verdana;
   }
 </style>
 <center><h1>Welcome To The Archive of Artem Inc.</h1></center>
