--- a/databases/a/index.html
+++ b/databases/a/index.html
@@ -10,7 +10,7 @@
   body{
     background-color:black;
     color:white;
-    font-family:Arial;
+    font-family:Verdana;
   }
   button#signin{
     width:80px;
