--- a/databases/b/movies.html
+++ b/databases/b/movies.html
@@ -9,6 +9,15 @@ body{
   font-family:"comic sans ms";
 }
 </style>
+<div id="menu">
+<a href="home.html"><button id="menubutton"><b>Home</b></button></a>
+<a href="movies.html"><button id="menubutton"><b>Movies</b></button></a>
+<a href="https://drive.google.com/drive/u/0/folders/0B9VmiUDD_RxLMzQwTTRLVmNKYmM"><button id="menubutton"><b>Artem Inc. Files</b></button></a>
+<a href="../b/"><button id="menubutton"><b>Database A</b></button></a>
+<a href="#"><button onclick="logOut()" id="menubutton"><b>Log Out</b></button></a>
+<b id="greeting"></b>
+</div>
+<hr />
 <center>
 <p>This is a place where you can watch some movies. I will try to post the ones I find.</p>
 <img src="https://www.brandsoftheworld.com/sites/default/files/styles/logo-thumbnail/public/0019/7207/brand.gif?itok=2AxYfxxD"/>
