--- a/databases/b/movies.html
+++ b/databases/b/movies.html
@@ -13,7 +13,7 @@ body{
 <a href="home.html"><button id="menubutton"><b>Home</b></button></a>
 <a href="movies.html"><button id="menubutton"><b>Movies</b></button></a>
 <a href="https://drive.google.com/drive/u/0/folders/0B9VmiUDD_RxLMzQwTTRLVmNKYmM"><button id="menubutton"><b>Artem Inc. Files</b></button></a>
-<a href="../b/"><button id="menubutton"><b>Database A</b></button></a>
+<a href="../a/"><button id="menubutton"><b>Database A</b></button></a>
 <a href="#"><button onclick="logOut()" id="menubutton"><b>Log Out</b></button></a>
 <b id="greeting"></b>
 </div>
