--- a/databases/b/index.html
+++ b/databases/b/index.html
@@ -3,7 +3,7 @@
 <head>
 <link rel="icon" href="https://arteminc.github.io/favicons/databaseblogo.ico" type="image/x-icon" />
 <title>Artem Inc. | Database B - Login</title>
-<script src="access.js"></script>
+<script src="css/fonts.js"></script>
 </head>
 <body>
 <style>
