--- a/databases/a/index.html
+++ b/databases/a/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Artem Inc. | Database A - Login</title>
 <link rel="icon" href="/favicons/databasealogo.ico" type="image/x-icon" />
-<script src="access.js"></script>
+<script src="css/fonts.js"></script>
 </head>
 <body>
 <style>
