--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -25,6 +25,16 @@ fieldset{
 <b id="greeting"></b>
 </div>
 <hr />
+<center><h1>Welcome to Database A</h1></center>
+<hr />
+<br />
+<hr />
+<p>
+<marquee>Remember to come to the Black Jeep Studios Club meeting in P5 on Tuesdays!</marquee>
+<p>
+<hr />
+<br />
+<hr />
 <fieldset id="indianabobmadlibs">
 <legend><b>Indiana Bob Madlibs</b></legend>
 <i><b><a href="resources/indianabobmadlib1.pdf" target="_blank" title="Indiana Bob and a Strange Encounter with Aliens - Madlib #1">Indiana Bob and a Strange Encounter with Aliens - Madlib #1</a></b></i>
