--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -27,13 +27,11 @@ fieldset{
 <hr />
 <center><h1>Welcome to Database A</h1></center>
 <hr />
-<br />
 <hr />
 <p>
-<marquee>Remember to come to the Black Jeep Studios Club meeting in P5 on Tuesdays!</marquee>
+  <marquee><h1>Remember to come to the Black Jeep Studios Club meeting in P5 on Tuesdays!</h1></marquee>
 <p>
 <hr />
-<br />
 <hr />
 <fieldset id="indianabobmadlibs">
 <legend><b>Indiana Bob Madlibs</b></legend>
