--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -15,6 +15,10 @@ fieldset{
   border-color:#ffcc66;
   border-radius:7.5px;
 }
+div#banner{
+  background-color:white;
+  color:#b30000;
+}
 </style>
 <div id="menu">
 <a href="home.html"><button id="menubutton" onmouseover="highlight()"><b>Home</b></button></a>
@@ -26,11 +30,13 @@ fieldset{
 </div>
 <hr />
 <center><h1>Welcome to Database A</h1></center>
+<div id="banner">
 <hr />
 <hr />
 <marquee><h1>Remember to come to the Black Jeep Studios Club meeting in P5 on Tuesdays!</h1></marquee>
 <hr />
 <hr />
+</div>
 <fieldset id="indianabobmadlibs">
 <legend><b>Indiana Bob Madlibs</b></legend>
 <i><b><a href="resources/indianabobmadlib1.pdf" target="_blank" title="Indiana Bob and a Strange Encounter with Aliens - Madlib #1">Indiana Bob and a Strange Encounter with Aliens - Madlib #1</a></b></i>
