--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -19,6 +19,9 @@ div#banner{
   background-color:white;
   color:#b30000;
 }
+hr#bannerdiv{
+  border: 3px solid #ffcc66;
+}
 </style>
 <div id="menu">
 <a href="home.html"><button id="menubutton" onmouseover="highlight()"><b>Home</b></button></a>
@@ -31,11 +34,11 @@ div#banner{
 <hr />
 <center><h1>Welcome to Database A</h1></center>
 <div id="banner">
-<hr />
-<hr />
+<hr id="bannerdiv"/>
+<hr id="bannerdiv"/>
 <marquee><h1>Remember to come to the Black Jeep Studios Club meeting in P5 on Tuesdays!</h1></marquee>
-<hr />
-<hr />
+<hr id="bannerdiv"/>
+<hr id="bannerdiv"/>
 </div>
 <fieldset id="indianabobmadlibs">
 <legend><b>Indiana Bob Madlibs</b></legend>
