--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -61,6 +61,7 @@ hr#bannerdiv{
 <fieldset id="quotes">
 <legend><b>Quotes</b></legend>
 <p><i>"Don't build a wall, build a future." - Sean He</i></p>
+<p><i>"What happens to a dumpling that wears a baseball cap? Nothing good." - Unknown</i></p>
 </fieldset>
 
 <fieldset id="jokes">
