--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -30,6 +30,20 @@ hr#bannerdiv{
 <a href="../b/"><button id="menubutton"><b>Database B</b></button></a>
 <a href="#"><button onclick="logOut()" id="menubutton"><b>Log Out</b></button></a>
 <b id="greeting"></b>
+<div>
+<script>
+  (function() {
+    var cx = '011575627679728819729:g7n4vbur_as';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+</script>
+<gcse:search></gcse:search>
+</div>
 </div>
 <hr />
 <center><h1>Welcome to Database A</h1></center>
