--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -30,7 +30,7 @@ hr#bannerdiv{
 <a href="../b/"><button id="menubutton"><b>Database B</b></button></a>
 <a href="#"><button onclick="logOut()" id="menubutton"><b>Log Out</b></button></a>
 <b id="greeting"></b>
-<div>
+<div width="1000" height="50">
 <script>
   (function() {
     var cx = '011575627679728819729:g7n4vbur_as';
