--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -24,11 +24,11 @@ hr#bannerdiv{
 }
 </style>
 <div id="menu">
-<a href="home.html"><div id="menubutton" onmouseover="highlight()"><b>Home</b></div></a>
-<a href="calendar.html"><div id="menubutton"><b>Calendar</b></div></a>
-<a href="latestnews.html"><div id="menubutton"><b>Latest News</b></div></a>
-<a href="../b/"><div id="menubutton"><b>Database B</b></div></a>
-<a href="#"><div onclick="logOut()" id="menubutton"><b>Log Out</b></div></a>
+<a href="home.html"><button id="menubutton" onmouseover="highlight()"><b>Home</b></button></a>
+<a href="calendar.html"><button id="menubutton"><b>Calendar</b></button></a>
+<a href="latestnews.html"><button id="menubutton"><b>Latest News</b></button></a>
+<a href="../b/"><button id="menubutton"><b>Database B</b></button></a>
+<a href="#"><button onclick="logOut()" id="menubutton"><b>Log Out</b></button></a>
 <b id="greeting"></b>
 </div>
 <center><h1>Welcome to Database A</h1></center>
