--- a/informational-presentation-3-2017/environment/index.html
+++ b/informational-presentation-3-2017/environment/index.html
@@ -6,18 +6,30 @@
 <body>
 <style>
 body{
-  font-style:"Patrick Hand SC",sans-serif;
+  font-style:"patrick hand sc",sans-serif;
 }
 #menu{
   background-color:#4289f4;
-  color:white;
+  height:60px;
 }
 a{
   text-decoration:none;
+  color:white;
+}
+#menubutton{
+  background-color:#4289f4;
+  height:50px;
+  width:75px;
+}
+#menubutton:hover{
+  background-color:white;
+  height:50px;
+  width:75px;
+  color:#4289f4;
 }
 </style>
 <div id="menu">
-<div><a href="index.html">HOME</a></div>
+<div id="menubutton"><a href="index.html">HOME</a></div>
 </div>
 </body>
 </html>
