--- a/informational-presentation-3-2017/environment/index.html
+++ b/informational-presentation-3-2017/environment/index.html
@@ -5,9 +5,6 @@
 </head>
 <body>
 <style>
-body{
-  font-style:"patrick hand sc",sans-serif;
-}
 #menu{
   background-color:#4289f4;
   height:60px;
@@ -15,17 +12,20 @@ body{
 a{
   text-decoration:none;
   color:white;
+  font-style:"patrick hand sc";
 }
 #menubutton{
   background-color:#4289f4;
   height:50px;
   width:75px;
+  border-radius:7.5px;
 }
 #menubutton:hover{
   background-color:white;
   height:50px;
   width:75px;
   color:#4289f4;
+  border-radius:7.5px;
 }
 </style>
 <div id="menu">
