--- a/informational-presentation-3-2017/environment/index.html
+++ b/informational-presentation-3-2017/environment/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Environmental Pollution</title>
+<link href="https://fonts.googleapis.com/css?family=Patrick+Hand+SC" rel="stylesheet">
 </head>
 <body>
 <style>
@@ -12,7 +13,7 @@
 a{
   text-decoration:none;
   color:white;
-  font-style:"patrick hand sc";
+  font-style:"Patrick Hand SC", cursive;
 }
 #menubutton{
   background-color:#4289f4;
