--- a/databases/b/home.html
+++ b/databases/b/home.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" href="menuBar.css" type="text/css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="check.js"></script>
+<link rel="stylesheet" href="fonts.css" type="text/css"/>
 </head>
 <body>
 <style>
@@ -25,6 +26,8 @@ fieldset{
 <b id="greeting"></b>
 </div>
 <hr />
+  <b>Premium Tools-</b>
+  <p id="font-supercell">Supercell Font Download <a href="Supercell-magic-webfont.ttf">Here</a></p>
 <script src="menuBar.js"></script>
 </body>
 </html>
