--- a/databases/b/home.html
+++ b/databases/b/home.html
@@ -27,7 +27,7 @@ fieldset{
 </div>
 <hr />
   <b>Premium Tools-</b>
-  <p id="font-supercell">Supercell Font Download <a href="Supercell-magic-webfont.ttf">Here</a></p>
+  <p id="font-supercell">Supercell Font Download <a href="resources/Supercell-magic-webfont.ttf">Here</a></p>
 <script src="menuBar.js"></script>
 </body>
 </html>
