--- a/databases/b/home.html
+++ b/databases/b/home.html
@@ -28,6 +28,11 @@ fieldset{
 <hr />
   <b>Premium Tools-</b>
   <p id="font-supercell">Supercell Font Download <a href="resources/Supercell-magic-webfont.ttf">Here</a></p>
+  <ul>
+    <li><b>Instructions:</b>
+      <br />
+      After downloading the font file, go to Downloads and double click it. A window should open up. In the top half of the window, look for a button that says <b>Install</b>. By clicking on the button the font should be installed and when you use your word processing program look for the <div id="font-supercell">Supercell-Magic</div> font.</li>
+  </ul>
 <script src="menuBar.js"></script>
 </body>
 </html>
