--- a/databases/b/home.html
+++ b/databases/b/home.html
@@ -16,6 +16,9 @@ fieldset{
   border-color:#0084FF;
   border-radius:7.5px;
 }
+body{
+  font-family:Arial;
+}
 </style>
 <div id="menu">
 <a href="home.html"><button id="menubutton"><b>Home</b></button></a>
@@ -31,7 +34,7 @@ fieldset{
   <ul>
     <li><b>Instructions:</b>
       <br />
-      After downloading the font file, go to Downloads and double click it. A window should open up. In the top half of the window, look for a button that says <b>Install</b>. By clicking on the button the font should be installed and when you use your word processing program look for the <div id="font-supercell">Supercell-Magic</div> font.</li>
+      After downloading the font file, go to Downloads and double click it. A window should open up. In the top half of the window, look for a button that says <b>Install</b>. By clicking on the button the font should be installed and when you use your word processing program look for the <span id="font-supercell" style="font-size:10px">Supercell-Magic</span> font.</li>
   </ul>
 <script src="menuBar.js"></script>
 </body>
