--- a/databases/b/home.html
+++ b/databases/b/home.html
@@ -19,6 +19,12 @@ fieldset{
 body{
   font-family:Arial;
 }
+a {
+  text-decoration:none;
+}
+a:hover {
+  text-decoration:underline;
+}
 </style>
 <div id="menu">
 <a href="home.html"><button id="menubutton"><b>Home</b></button></a>
