--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 <p>Right now Artem Inc. contains two databases. Database A contains jokes, quotes, and other cool stuff and a virtual calendar. Database B is still under construction. It will have secret documents and information. The links are below
 <br />
 <center>
-<a href="porkbun" id="a">Database A</a>
-<a href="porkbun" id="b">Database B</a>
+<a href="getseanintrouble" id="a">Database A</a>
+<a href="getseanintrouble" id="b">Database B</a>
 </center>
 </body>
 </html>
