--- a/404.html
+++ b/404.html
@@ -16,6 +16,10 @@ a {
   text-decoration:none;
   color:#6699ff;
 }
+a.hover {
+  text-decoration:underline;
+  color:#6699ff;
+}
 </style>
 <center>
 <h1><b>404</b></h1>
