--- a/databases/a/latestnews.html
+++ b/databases/a/latestnews.html
@@ -61,6 +61,10 @@ UPDATES
 > The database has been moved to arteminc.github.io
 <br />
 > Calendar : Added the year next to the month
+<hr />
+6/8 :
+<br />
+>Artem Inc. URL Shortener has been launched!
 </b>
 </fieldset>
 <script src="menuBar.js"></script>
