--- a/databases/b/home.html
+++ b/databases/b/home.html
@@ -21,6 +21,7 @@ body{
 }
 a {
   text-decoration:none;
+  color:#6699ff;
 }
 a:hover {
   text-decoration:underline;
@@ -42,6 +43,8 @@ a:hover {
       <br />
       After downloading the font file, go to Downloads and double click it. A window should open up. In the top half of the window, look for a button that says <b>Install</b>. By clicking on the button the font should be installed and when you use your word processing program look for the <span id="font-supercell" style="font-size:10px">Supercell-Magic</span> font.</li>
   </ul>
+<hr />
+<b>NEW!</b><a href="http://arteminc.site11.com">The Artem Inc. URL Shortener</a>
 <script src="menuBar.js"></script>
 </body>
 </html>
