--- a/databases/b/home.html
+++ b/databases/b/home.html
@@ -45,6 +45,11 @@ a:hover {
   </ul>
 <hr />
 <b>NEW!</b><a href="http://arteminc.site11.com">The Artem Inc. URL Shortener</a>
+<p>Here are some premade links to prevent the same links being made over and over again so we can save storage space:</p>
+<ul>
+<li>Artem Inc. Database A - arteminc.site11.com/database-a</li>
+<li>Artem Inc. Database B - arteminc.site11.com/database-b</li>
+</ul>
 <script src="menuBar.js"></script>
 </body>
 </html>
