--- a/databases/a/latestnews.html
+++ b/databases/a/latestnews.html
@@ -65,6 +65,14 @@ UPDATES
 6/8 :
 <br />
 >Artem Inc. URL Shortener has been launched!
+<hr />
+6/12 :
+<br />
+>Bug fixes for the Calendar
+<hr />
+6/14 :
+<br />
+>The Artem Inc. URL Shortener has been moved from arteminc.site11.com to ai.net63.net
 </b>
 </fieldset>
 <script src="menuBar.js"></script>
