--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -97,7 +97,7 @@ Sneaking on the database during class? Here are some quick links to use to avoid
   <li><a href="https://app.schoology.com/home" target="_blank">Schoology(only use if you are logged in)</a></li>
 </ul>
 </fieldset>
-<b>Feel free to contribute games, quotes, or jokes you or your friend made by emailing us at <a href="javascript(mailto:contact.arteminc@gmail.com">contact.arteminc@gmail.com</a>. Please provide url(if needed) and creator.</b>
+<b>Feel free to contribute games, quotes, or jokes you or your friend made by emailing us at <a href="http://javascript(mailto:contact.arteminc@gmail.com">contact.arteminc@gmail.com</a>. Please provide url(if needed) and creator.</b>
 <script src="menuBar.js"></script>
 </body>
 </html>
