--- a/databases/b/home.html
+++ b/databases/b/home.html
@@ -44,12 +44,13 @@ a:hover {
       After downloading the font file, go to Downloads and double click it. A window should open up. In the top half of the window, look for a button that says <b>Install</b>. By clicking on the button the font should be installed and when you use your word processing program look for the <span id="font-supercell" style="font-size:10px">Supercell-Magic</span> font.</li>
   </ul>
 <hr />
-<b>NEW!</b><a href="http://ai.net63.net">The Artem Inc. URL Shortener</a>
+<a href="http://ai.net63.net">The Artem Inc. URL Shortener</a>
 <p>Here are some premade links to prevent the same links being made over and over again so we can save storage space:</p>
 <ul>
 <li>Artem Inc. Database A - arteminc.site11.com/database-a</li>
 <li>Artem Inc. Database B - arteminc.site11.com/database-b</li>
 </ul>
+<b>NEW!</b><a href="clock">Here</a> is a HTML clock I made. If you want to download the code, click <a href="clock.txt">here</a>
 <script src="menuBar.js"></script>
 </body>
 </html>
