--- a/databases/b/home.html
+++ b/databases/b/home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Artem Inc. | Database A - Home</title>
-<link href="/favicons/databasealogo.ico" rel="icon" type="image/x-icon" />
+<title>Artem Inc. | Database B - Home</title>
+<link href="/favicons/databaseblogo.ico" rel="icon" type="image/x-icon" />
 <link rel="stylesheet" href="menuBar.css" type="text/css"/>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 <script src="check.js"></script>
