--- a/homepage.html
+++ b/homepage.html
@@ -33,6 +33,9 @@
   body{
     font-family:Verdana;
   }
+  hr {
+    border-color:white;
+  }
 </style>
 <center><h1>Welcome To The Archive of Artem Inc.</h1></center>
 <p>Right now Artem Inc. contains two databases. Database A contains jokes, quotes, and other cool stuff and a virtual calendar. Database B is still under construction. It will have secret documents and information. The links are below
