--- a/homepage.html
+++ b/homepage.html
@@ -34,7 +34,7 @@
     font-family:Verdana;
   }
   hr {
-    border-color:white;
+    border: "1px solid white";
   }
 </style>
 <center><h1>Welcome To The Archive of Artem Inc.</h1></center>
