--- a/databases/b/clock.html
+++ b/databases/b/clock.html
@@ -48,6 +48,15 @@ function drawTime(ctx, radius){
     var hour = now.getHours();
     var minute = now.getMinutes();
     var second = now.getSeconds();
+	ctx.textBaseline="middle";
+	ctx.textAlign="center";
+	if(hour > 12) {
+		ctx.fillStyle = "yellow";
+		ctx.fillText("AM", 0, 0);
+	}else {
+		ctx.fillStyle = "#0cc";
+		ctx.fillText("PM", 0, 0);
+	}
     //hour
     hour=hour%12;
     hour=(hour*Math.PI/6)+
