--- a/databases/a/home.html
+++ b/databases/a/home.html
@@ -69,6 +69,8 @@ hr#bannerdiv{
 <i><b><a href="https://codecademy123.github.io/games/click-the-button" target="_blank" title="Click the Button Game">Click the Button Game(on this very website)</a></b></i>
 <br />
 <i><b><a href="https://codecademy123.github.io/games/embeddedgames" target="_blank" title="Embedded Games">Embedded IO Games</a></b></i>
+<br />
+<i><b><a href="http://cubejump.web44.net" target="_blank" title="CubeJump">CubeJump</a></b></i>
 </fieldset>
 
 <fieldset id="quotes">
