--- a/databases/b/home.html
+++ b/databases/b/home.html
@@ -50,7 +50,7 @@ a:hover {
 <li>Artem Inc. Database A - arteminc.site11.com/database-a</li>
 <li>Artem Inc. Database B - arteminc.site11.com/database-b</li>
 </ul>
-<b>NEW!</b><a href="clock">Here</a> is a HTML clock I made. If you want to download the code, click <a href="clock.txt">here</a>
+<b>NEW!</b><a href="clock">Here</a> is a HTML clock I made. If you want to download the code, click <a href="clock.html" download="clock.html">here</a>
 <script src="menuBar.js"></script>
 </body>
 </html>
